# kage

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml  Justfile  README.md  kage-linux-helper  mise.toml
.github/workflows/: ci.yml  linux-tags.yml  macos-tags.yml  release.yml
Casks/: kage-helper.rb
Formula/: kage.rb
age-plugin-kage/: Cargo.toml
age-plugin-kage/src/: main.rs
crates/age-plugin-kage/: Cargo.toml
crates/kage-audit/: Cargo.toml
crates/kage-audit/src/: lib.rs
crates/kage-cli/: Cargo.toml
crates/kage-cli/src/: main.rs  onepassword.rs  platform.rs
crates/kage-comm/: Cargo.toml  build.rs
crates/kage-comm/objc/: kage_xpc.m
crates/kage-comm/src/: adapter.rs  artifact_signature.rs  assertion.rs  crypto.rs  dpapi.rs  error.rs  ipc.rs  lib.rs  manifest_io.rs  named_pipe.rs  registry.rs  secret_crypto.rs  signing.rs  signing_record.rs  ssh_signature.rs  transport.rs
crates/kage-git-signer/: Cargo.toml
crates/kage-git-signer/src/: main.rs
crates/kage-types/: Cargo.toml
crates/kage-types/src/: adapter.rs  audit.rs  capability.rs  envelope.rs  lib.rs  scope.rs  secret.rs
crates/kage-wsl-bridge/: Cargo.toml
crates/kage-wsl-bridge/src/: main.rs
crates/kaged/: Cargo.toml
crates/kaged/src/: age_adapter.rs  artifact_adapter.rs  assert_adapter.rs  git_sign_adapter.rs  main.rs  runtime_adapter.rs  sign_adapter.rs  signing_helpers.rs  state.rs
docs/: ARCHITECTURE.md  DESIGN_SPEC.md
docs/v1/: ARCHITECTURE.md  KAGE_INFOGRAPHIC_SPEC.html
docs/v2/: AGE_PLUGIN_PROTOCOL_REFERENCE.md  DESIGN_SPEC_V2.md  IMPLEMENTATION_GUIDE.md  IPC_PROTOCOL.md  LOCAL_TESTING_MACOS.md  REKEYING_GUIDE.md  RELEASING.md  ROADMAP.md  SECURITY_AND_CRYPTO.md  SOFTWARE_BOM.md  TECH_STACK.md  TRANSITION_GUIDE.md
docs/v3/: DESIGN_SPEC_V3.md  IMPLEMENTATION_STATUS.md
kage-cli/: Cargo.toml
kage-cli/src/: cli.rs  helpers.rs  main.rs  platform.rs
kage-comm/: Cargo.toml
kage-comm/src/: devwrap.rs  ffi.rs  ipc.rs  kid.rs  lib.rs  transport.rs
kage-core/: Cargo.toml
kage-core/src/: backend.rs  config.rs  crypto.rs  error.rs  keystore.rs  lib.rs
kage-mac-helper/: Package.swift
kage-mac-helper/LaunchAgents/: com.kage.daemon.plist
kage-mac-helper/Sources/kage-mac-helper/: Logic.swift  main.swift
kaged/: Cargo.toml
kaged/src/: main.rs
scripts/mise/: assert-artifacts.sh  build-mac.sh  codesign-rust.sh  doctor.sh  macos-smoke.sh
scripts/release/: notarize-macos.sh  package.sh  update-homebrew-tap.sh
