[package]
name = "age-plugin-kage"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "age-plugin-kage"
path = "src/main.rs"

[dependencies]
age-core = "0.10"
age-plugin = "0.5"
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
kage-comm = { path = "../kage-comm" }
tokio = { version = "1.38", features = ["rt-multi-thread"] }
