[package]
name = "kage-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
kage-core = { path = "../kage-core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"
hostname = "0.3"
uuid = { version = "1.6", features = ["v4"] }
which = "6.0"
