[package]
name = "kage-cli"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "kage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
serde_json = "1.0"
which = "6.0"
base64 = "0.22"
kage-comm = { path = "../kage-comm" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tempfile = "3.23"
