[package]
name = "kage-comm"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# C-ABI for use by the macOS daemon (Swift) to share v2 crypto logic.
ffi = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bech32 = "0.9"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
dirs = "5.0"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["net", "io-util", "time", "rt"] }
zeroize = { version = "1.8", features = ["derive"] }

[build-dependencies]
cc = "1.0"
