[package]
name = "kage-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
bech32 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
base64 = "0.21"
