[package]
name = "kage-comm"
version = "3.0.0-alpha.1"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# C-ABI for use by the macOS daemon (Swift) to share v2 crypto logic.
ffi = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bech32 = "0.9"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
dirs = "5.0"
hex = "0.4"
kage-types = { path = "../kage-types" }
hkdf = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["net", "io-util", "time", "rt"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.23"
