[package]
name = "kage-wsl-bridge"
version = "3.0.0-alpha.1"
edition = "2021"

[[bin]]
name = "kage-wsl-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util"] }
kage-comm = { path = "../kage-comm" }
